--- a/service.yaml
+++ b/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: cafestatic
-  name: cafestatic
+    app: mycafeapp
+  name: mycafeapp
 spec:
   type: NodePort
   ports:
@@ -11,4 +11,4 @@ spec:
       targetPort: 80
       protocol: TCP
   selector:
-    app: cafestatic
+    app: mycafeapp
